--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/jwtSec
-spring.datasource.username=postgres
-spring.datasource.password=1234
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+app.jwtSecret=JWTSuperSecretKey
+app.jwtExpirationInMs=36000000
